--- a/index.html
+++ b/index.html
@@ -146,14 +146,14 @@
         <span style="color: rgba(158, 43, 2, 0.749)">
           (about) <br /><br />
         </span>
-        HEY I'M SOUKOU EZRA. <br> I'M A CREATIVE FULL-STACK SOFTWARE DEVELOPER 
-        BASED IN LAGOS,NIGERIA FOCUSED ON CREATING INTERACTIVE DIGITAL
+        HEY I'M SOUKOU EZRA, I'M A CREATIVE FULL-STACK SOFTWARE DEVELOPER 
+        BASED IN LAGOS, NIGERIA FOCUSED ON CREATING INTERACTIVE DIGITAL
         EXPERIENCE FOR THE WEB.
       </p>
 
       <p class="slide-2 interactable">
         FOR OVER 2 YEAR'S NOW I HAVE BEEN KEEN ON PROVIDING VALUE, AND HELPING
-        CLIENTS ACCOMPLISH TECHNICAL GOALS, <br> <br> BY DEVELOPING USER FRIENDLY AND
+        CLIENTS ACCOMPLISH TECHNICAL GOALS, BY DEVELOPING USER FRIENDLY AND
         FORWARD-THINKING APPS AND SOFTWARE. <br /> <br>
         EXPERIENCE WITH PYTHON AND JAVASCRIPT (BOTH FRONT-END AND BACK-END),
         WITH FRAMEWORKS LIKE REACTJS, NODEJS, AND FRAPPE.
@@ -260,6 +260,7 @@
 
         <div class="f-links">
           <span
+          id="f-links-span"
             ><a
               href="https://twitter.com/bernardEzra2"
               target="_blank"
@@ -268,6 +269,7 @@
             ></span
           >
           <span
+          id="f-links-span"
             ><a
               href="https://www.linkedin.com/in/ezra-soukou-b2941b240"
               target="_blank"
@@ -276,6 +278,7 @@
             ></span
           >
           <span
+          id="f-links-span"
             ><a
               href="https://github.com/just-ez"
               target="_blank"
