--- a/index.html
+++ b/index.html
@@ -154,7 +154,10 @@
       <p class="slide-2 interactable">
         FOR OVER 2 YEAR'S NOW I HAVE BEEN KEEN ON PROVIDING VALUE, AND HELPING
         CLIENTS ACCOMPLISH TECHNICAL GOALS, BY DEVELOPING USER FRIENDLY AND
-        FORWARD-THINKING APPS AND SOFTWARE. <br /> <br>
+        FORWARD-THINKING APPS AND SOFTWARE. 
+      </p>
+
+      <p class="slide-2 interactable">
         EXPERIENCE WITH PYTHON AND JAVASCRIPT (BOTH FRONT-END AND BACK-END),
         WITH FRAMEWORKS LIKE REACTJS, NODEJS, AND FRAPPE.
       </p>
@@ -226,21 +229,6 @@
     </section>
 
     <div class="contact">
-      <!-- <h2>
-        DON'T HESITATE <br />
-        LET'S GET IN TOUCH.
-        <span
-          class="material-symbols-outlined"
-          style="
-            font-size: 2rem;
-            transform: rotate(90deg) translateX(40%);
-            font-weight: 900;
-            scale: 2;
-          "
-        >
-          forward
-        </span>
-      </h2> -->
 
       <a
         href="http://mailto:bernardezra112@gmail.com"
