--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
         <span class="line_right"></span>
       </a>
       <a
-        href="http://loopstudio.site"
+        href="https://loopstudio-807m.onrender.com/"
         target="_blank"
         rel="noopener noreferrer"
         class="box"
@@ -205,11 +205,11 @@
         <span class="w-header"> PLUS 234 STORE </span>
         <span class="line_right"></span>
       </a>
-      <a href="http://" target="_blank" rel="noopener noreferrer" class="box">
+      <a href="http://damax-codz.github.io/Art_me/" target="_blank" rel="noopener noreferrer" class="box">
         <div class="img">
           <img src="./assets/artme1.png" alt="" />
         </div>
-        <span>ONLINE PLATFORM MADE FOR ARTIST (still working on it)</span>
+        <span>ONLINE PLATFORM MADE FOR ARTIST </span>
         <span class="w-header"> ARTME </span>
         <span class="line_right"></span>
       </a>
