--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
       rel="stylesheet"
       href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0"
     />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js" integrity="sha512-v2CJ7UaYy4JwqLDIrZUI/4hqeoQieOmAZNXBeQyjo21dadnwR+8ZaIJVT8EE2iyI61OV8e6M8PP2/4hpQINQ/g==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script
       src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.5/gsap.min.js"
       integrity="sha512-cOH8ndwGgPo+K7pTvMrqYbmI8u8k6Sho3js0gOqVWTmQMlLIi6TbqGWRTpf1ga8ci9H3iPsvDLr4X7xwhC/+DQ=="
@@ -164,7 +165,7 @@
     </div>
 
    
-    <section id="works">
+    <section id="works" class="sticky-bar">
 
       <a
         href="http://thejustprojects.com"
@@ -228,7 +229,8 @@
       </a>
     </section>
 
-    <div class="contact">
+    <div class="contact_wrapper">
+      <div class="contact">
 
       <a
         href="http://mailto:bernardezra112@gmail.com"
@@ -236,11 +238,7 @@
         rel="noopener noreferrer"
         class="marque_container"
       >
-        <div class="marque">
-          <span> WANNA BE STARTING SOMETHING? SAY HELLO </span>
-          <span>-</span>
-          <span> WANNA BE STARTING SOMETHING? SAY HELLO </span>
-        </div>
+       Wanna Say Hello?
       </a>
 
       <footer>
@@ -274,14 +272,7 @@
               >GITHUB</a
             ></span
           >
-          <!-- <span
-            ><a
-              href="https://www.instagram.com/ezthedevelop3r/"
-              target="_blank"
-              rel="noopener noreferrer"
-              >INSTAGRAM</a
-            ></span
-          > -->
+          
         </div>
 
         <a href="#header" style="display: flex; align-items: center; gap: 1em">
@@ -293,6 +284,7 @@
           </div>
         </a>
       </footer>
+    </div>
     </div>
   </body>
 </html>
