--- a/index.html
+++ b/index.html
@@ -275,14 +275,14 @@
           
         </div>
 
-        <a href="#header" style="display: flex; align-items: center; gap: 1em">
+        <!-- <a href="#header" style="display: flex; align-items: center; gap: 1em">
           BACK TO TOP
           <div class="arrow-container">
             <span class="material-symbols-outlined" style="font-size: 1.5em">
               arrow_upward
             </span>
           </div>
-        </a>
+        </a> -->
       </footer>
     </div>
     </div>
