--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     <h1 style="opacity: 0;">tap.</h1>
     <div class="container">
       <div class="scene">
-        <span class="loading-label">Loading...</span>
+        <span class="loading_label">Loading...</span>
         <!-- Note:: You could write a quick JavaScript generator to do this -->
         <!-- Need a notion of the number of segments in the bar plus the layout for the grid -->
         <div class="bar" style="--columns: 20% 0 10% 0 10% 0 10% 0 20% 0 10% 0 20%; --total-length: 400;">
@@ -53,41 +53,41 @@
           <!-- The aligned should add to 100 as we're doing grid -->
           <!-- The non-aligned dictate the depth being used -->
           <!-- Needs to be the length of the depth currently plus the destination depth -->
-          <div style="--name:  segment-1; --delay:   0; --length: 20; --depth:   0;" class="bar__segment bar__segment--aligned"></div>
-          <div style="--name:  segment-2; --delay:  20; --length: 30; --depth:   0;" class="bar__segment bar__segment--front"></div>
-          <div style="--name:  segment-3; --delay:  50; --length: 10; --depth:  30;" class="bar__segment bar__segment--aligned"></div>
-          <div style="--name:  segment-4; --delay:  60; --length: 50; --depth:  30;" class="bar__segment bar__segment--back"></div>
-          <div style="--name:  segment-5; --delay: 110; --length: 10; --depth: -20;" class="bar__segment bar__segment--aligned"></div>
-          <div style="--name:  segment-6; --delay: 120; --length: 60; --depth: -20;" class="bar__segment bar__segment--front"></div>
-          <div style="--name:  segment-7; --delay: 180; --length: 10; --depth:  40;" class="bar__segment bar__segment--aligned"></div>
-          <div style="--name:  segment-8; --delay: 190; --length: 70; --depth:  40;" class="bar__segment bar__segment--back"></div>
-          <div style="--name:  segment-9; --delay: 260; --length: 20; --depth: -30;" class="bar__segment bar__segment--aligned"></div>
-          <div style="--name: segment-10; --delay: 280; --length: 50; --depth: -30;" class="bar__segment bar__segment--front"></div>
-          <div style="--name: segment-11; --delay: 330; --length: 30; --depth:  20;" class="bar__segment bar__segment--aligned"></div>
-          <div style="--name: segment-12; --delay: 360; --length: 20; --depth:  20;" class="bar__segment bar__segment--back"></div>
-          <div style="--name: segment-13; --delay: 380; --length: 20; --depth:   0;" class="bar__segment bar__segment--aligned"></div>
+          <div style="--name:  segment_1; --delay:   0; --length: 20; --depth:   0;" class="bar__segment bar__segment--aligned"></div>
+          <div style="--name:  segment_2; --delay:  20; --length: 30; --depth:   0;" class="bar__segment bar__segment--front"></div>
+          <div style="--name:  segment_3; --delay:  50; --length: 10; --depth:  30;" class="bar__segment bar__segment--aligned"></div>
+          <div style="--name:  segment_4; --delay:  60; --length: 50; --depth:  30;" class="bar__segment bar__segment--back"></div>
+          <div style="--name:  segment_5; --delay: 110; --length: 10; --depth: -20;" class="bar__segment bar__segment--aligned"></div>
+          <div style="--name:  segment_6; --delay: 120; --length: 60; --depth: -20;" class="bar__segment bar__segment--front"></div>
+          <div style="--name:  segment_7; --delay: 180; --length: 10; --depth:  40;" class="bar__segment bar__segment--aligned"></div>
+          <div style="--name:  segment_8; --delay: 190; --length: 70; --depth:  40;" class="bar__segment bar__segment--back"></div>
+          <div style="--name:  segment_9; --delay: 260; --length: 20; --depth: -30;" class="bar__segment bar__segment--aligned"></div>
+          <div style="--name: segment_10; --delay: 280; --length: 50; --depth: -30;" class="bar__segment bar__segment--front"></div>
+          <div style="--name: segment_11; --delay: 330; --length: 30; --depth:  20;" class="bar__segment bar__segment--aligned"></div>
+          <div style="--name: segment_12; --delay: 360; --length: 20; --depth:  20;" class="bar__segment bar__segment--back"></div>
+          <div style="--name: segment_13; --delay: 380; --length: 20; --depth:   0;" class="bar__segment bar__segment--aligned"></div>
         </div>
       </div>
     </div>
     </div>
     <header id="header">
       <nav>
-        <p class="nav-p interactable">
+        <p class="nav_p interactable">
           SENAMI <br />
           SOUKOU
         </p>
         <div>
-          <p class="nav-p">
+          <p class="nav_p">
             DEVELOPER & DESIGNER <br />
             PORTFOLO / 2023 - 2025
           </p>
 
-          <p class="nav-p">
+          <p class="nav_p">
             AVAILABLE FOR FREELANCE<br />
             WORKS FROM 2023
           </p>
 
-          <button class="nav-p">
+          <button class="nav_p">
             <div class="bg"></div>
             <a
               href="http://mailto:bernardezra112@gmail.com"
@@ -106,7 +106,7 @@
 
         <div class="hero_container_2">
           <span class="side_line"></span>
-          <ul class="slide-up">
+          <ul class="slide_up">
             <li>
               <a
                 href="https://www.linkedin.com/in/ezra-soukou-b2941b240"
@@ -132,9 +132,9 @@
               >
             </li>
           </ul>
-          <div class="scroll-down slide-up">
+          <div class="scroll_down slide_up">
             <a href="#about">SCROLL DOWN</a>
-            <div class="arrow-container">
+            <div class="arrow_container">
               <span class="material-symbols-outlined"> arrow_downward </span>
             </div>
           </div>
@@ -142,30 +142,31 @@
       </div>
     </header>
 
-    <div class="about-c" id="about">
-      <p class="slide-1 interactable">
-        <span style="color: rgba(158, 43, 2, 0.749)">
-          (about) <br /><br />
+    <div class="about_c" id="about">
+      <span class="about_header">
+            Who I Am?<br />
         </span>
-        HEY I'M SOUKOU EZRA, I'M A CREATIVE FULL-STACK SOFTWARE DEVELOPER 
+      <p class="slide_1 interactable">
+        
+        HEY I'M SOUKOU EZRA, I AM A CREATIVE FULL-STACK SOFTWARE ENGINEER 
         BASED IN LAGOS, NIGERIA FOCUSED ON CREATING INTERACTIVE DIGITAL
         EXPERIENCE FOR THE WEB.
       </p>
 
-      <p class="slide-2 interactable">
+      <p class="slide_2 interactable">
         FOR OVER 2 YEAR'S NOW I HAVE BEEN KEEN ON PROVIDING VALUE, AND HELPING
         CLIENTS ACCOMPLISH TECHNICAL GOALS, BY DEVELOPING USER FRIENDLY AND
         FORWARD-THINKING APPS AND SOFTWARE. 
       </p>
 
-      <p class="slide-2 interactable">
+      <p class="slide_2 interactable">
         EXPERIENCE WITH PYTHON AND JAVASCRIPT (BOTH FRONT-END AND BACK-END),
         WITH FRAMEWORKS LIKE REACTJS, NODEJS, AND FRAPPE.
       </p>
     </div>
 
    
-    <section id="works" class="sticky-bar">
+    <section id="works" class="sticky_bar">
 
       <a
         href="http://thejustprojects.com"
@@ -176,8 +177,8 @@
         <div class="img">
           <img src="./assets/jp.png" alt="" />
         </div>
-        <span>BOOTHCAMP FOR FRONT-END DEVELOPMENT AND UI/IX - DESIGN</span>
-        <span class="w-header"> THE JUST PROJECTS </span>
+        <span>BOOTHCAMP FOR FRONT_END DEVELOPMENT AND UI/IX _ DESIGN</span>
+        <span class="w_header"> THE JUST PROJECTS </span>
         <span class="line_right"></span>
       </a>
       <a
@@ -190,7 +191,7 @@
           <img src="./assets/loop2.png" alt="" />
         </div>
         <span>WEB PORTFOLIO FOR A WEB DESIGN AGENCY</span>
-        <span class="w-header"> LOOP STUDIO </span>
+        <span class="w_header"> LOOP STUDIO </span>
         <span class="line_right"></span>
       </a>
       <a
@@ -203,7 +204,7 @@
           <img src="./assets/2341.png" alt="" />
         </div>
         <span>E-CORMMERCE STORE FOR A CLOTHING BRAND</span>
-        <span class="w-header"> PLUS 234 STORE </span>
+        <span class="w_header"> PLUS 234 STORE </span>
         <span class="line_right"></span>
       </a>
       <a href="http://damax-codz.github.io/Art_me/" target="_blank" rel="noopener noreferrer" class="box">
@@ -211,11 +212,11 @@
           <img src="./assets/artme1.png" alt="" />
         </div>
         <span>ONLINE PLATFORM MADE FOR ARTIST </span>
-        <span class="w-header"> ARTME </span>
+        <span class="w_header"> ARTME </span>
         <span class="line_right"></span>
       </a>
       <a
-        href="https://pebbles-signature.com/home"
+        href="https://pebbles_signature.com/home"
         target="_blank"
         rel="noopener noreferrer"
         class="box"
@@ -224,7 +225,7 @@
           <img src="./assets/pebbles (2).png" alt="" />
         </div>
         <span>Online Booking Platform (apartments, laundry, rides etc.)</span>
-        <span class="w-header"> PEBBLES SIGNATURES. </span>
+        <span class="w_header"> PEBBLES SIGNATURES. </span>
         <span class="line_right"></span>
       </a>
     </section>
@@ -244,9 +245,9 @@
       <footer>
         <p>LAGOS, NG <span class="time"></span></p>
 
-        <div class="f-links">
+        <div class="f_links">
           <span
-          id="f-links-span"
+          id="f_links_span"
             ><a
               href="https://twitter.com/bernardEzra2"
               target="_blank"
@@ -255,18 +256,18 @@
             ></span
           >
           <span
-          id="f-links-span"
+          id="f_links_span"
             ><a
-              href="https://www.linkedin.com/in/ezra-soukou-b2941b240"
+              href="https://www.linkedin.com/in/ezra_soukou_b2941b240"
               target="_blank"
               rel="noopener noreferrer"
               >LINKEDN</a
             ></span
           >
           <span
-          id="f-links-span"
+          id="f_links_span"
             ><a
-              href="https://github.com/just-ez"
+              href="https://github.com/just_ez"
               target="_blank"
               rel="noopener noreferrer"
               >GITHUB</a
@@ -275,10 +276,10 @@
           
         </div>
 
-        <!-- <a href="#header" style="display: flex; align-items: center; gap: 1em">
+        <!--<a href="#header" style="display: flex; align_items: center; gap: 1em">
           BACK TO TOP
-          <div class="arrow-container">
-            <span class="material-symbols-outlined" style="font-size: 1.5em">
+          <div class="arrow_container">
+            <span class="material_symbols_outlined" style="font_size: 1.5em">
               arrow_upward
             </span>
           </div>
