bug fixes and updates

--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
 
     <div class="about_c" id="about">
       <span class="about_header">
-            Who I Am?<br />
+            Brief About Me<br />
         </span>
       <p class="slide_1 interactable">
          I'M SOUKOU EZRA, I AM A CREATIVE FULL-STACK SOFTWARE ENGINEER 
@@ -292,7 +292,7 @@
           <span
           id="f_links_span"
             ><a
-              href="https://twitter.com/bernardEzra2"
+              href="https://twitter.com/ezranotnull"
               target="_blank"
               rel="noopener noreferrer"
               >TWITTER</a
